<resources>
    <string name="app_name">Emergency Leash</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="emergency_leash_logo">Emergency Leash Logo</string>
    <string name="logout">Logout</string>
    <string name="LoggedInBodyText">
        Thank you for logging in! \n
        Please make sure you allow notifications if you have not done so already.  \n
        That way we can update you if someone finds your pet!
    </string>
    <string name="privacyPolicy">
        <b>Effective Date:</b> 08-20-2024 \n\n

At Emergency Leash, accessible from www.emergencyleash.com, we prioritize the privacy of our visitors. This Privacy Policy document outlines the types of information that is collected and recorded by Emergency Leash and how we use it.\n\n

        <b>Information We Collect</b>\n\n

When you sign up for our services, we may collect the following information:\n\n

        <ul>
            <li>Email Address\n</li>
            <li>Physical Address\n</li>
            <li>Phone Number\n\n</li>
        </ul>

<b>How We Use Your Information</b>\n\n

We use the information we collect in the following ways:\n\n
<ul>
    <li>To provide and maintain our Pet Reuniting service.\n</li>
    <li>To send you important updates and notifications related to your account and service.\n</li>
    <li>To contact you directly for purposes related to our service, including emergency communication regarding your pet.\n</li>
    <li>To improve, personalize, and expand our website and services.\n\n</li>
</ul>

<b>Information Sharing and Disclosure</b>\n\n

We value your privacy. We do not share, sell, rent, or trade your personal information with any third parties for marketing purposes. The information you provide is used solely for the purpose of providing our pet reuniting services.\n\n

        <b>Data Security</b>\n\n

We implement a variety of security measures to maintain the safety of your personal information. However, please note that no method of transmission over the Internet or method of electronic storage is 100% secure, and we cannot guarantee absolute security.\n\n

        <b>Your Rights</b>\n\n

You have the right to:\n\n

        <ul>
            <li>Access, update, or delete your personal information.\n</li>
            <li>Withdraw your consent at any time where we relied on your consent to process your personal information.\n\n</li>
        </ul>

        To exercise any of these rights, please contact us at support@emergencyleash.com\n\n

        <b>Changes to This Privacy Policy</b>\n\n

We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.\n\n

        <b>Contact Us</b>\n\n

If you have any questions about this Privacy Policy, please contact us at:\n\n

Email: support@emergencyleash.com\n
Address: 21830 Recreation Rd. Carson, CA 90745\n

    </string>
    <string name="termsOfUse">
<b>Emergency Leash Inc. Terms of Use</b>\n\n

<b>End-User License Agreement</b>\n\n

<b>Last updated: 09/05/2024</b>\n\n

This End-User License Agreement ("EULA") is a legally binding agreement between you, the Licensee, an individual customer or entity, and Emergency Leash Inc., located at 21830 Recreation Rd., Carson, CA 90745, the company and author of Emergency Leash, the Software, which may include associated media, printed materials, and online or electronic documentation. By accessing or using the Software, you agree to comply with the terms and conditions contained herein.\n\n

If you do not agree to the terms of this EULA, you must not download, install, or use the Software.\n\n

<b>Definitions</b>\n\n

<ul>
    <li>"EULA" refers to this End-User License Agreement, including any amendments.\n</li>
    <li>"Licensee" refers to the individual or entity that downloads and uses the Software.\n</li>
    <li>"Licensor" refers to Emergency Leash Inc.\n</li>
    <li>"Software/Licensed Product" refers to Emergency Leash, the Licensed Product provided under this EULA.\n\n</li>
</ul>

<b>Grant of License</b>\n\n

Emergency Leash Inc. grants the Licensee a royalty-free, revocable, limited, non-exclusive license to use the Software. Licensee is prohibited from making any charges for distributing the Software without explicit written consent from the Licensor.\n\n

<b>Intellectual Property</b>\n\n

All rights, titles, and interests in the copyrights and other intellectual property related to the Software are owned by Emergency Leash Inc. No provision of this EULA grants Licensee any rights to use intellectual property contained in the Software, except as outlined.\n\n

<b>Description of Rights and Limitations</b>\n\n

<ol>
<li><b>Installation and Use:</b> The Licensee may install and use the Software for personal or business use.\n</li>
<li><b>Reproduction and Distribution:</b> Licensee may not redistribute copies of the Software without the written permission of the Licensor.\n</li>
    <li><b>Licensee Limitations:</b>\n</li>

<ul>
    <li>Licensee may not use the Software for unlawful purposes.\n</li>
    <li>Licensee is prohibited from reverse engineering, decompiling, or disassembling the Software except as allowed by applicable law.\n\n</li>
</ul>
</ol>

<b>Update and Maintenance\n\n</b>

Emergency Leash Inc. may provide updates and maintenance on an as-needed basis, without any obligation to do so.\n\n

<b>Support\n\n</b>

Emergency Leash Inc. is not obligated to provide ongoing support or updates for the Software.\n\n

<b>General Provisions\n\n</b>

<ol>
    <li><b>Termination:</b> This EULA may be terminated by either party at any time. Upon termination, the Licensee must cease all use of the Software.</li>\n
    <li><b>Non-Transferability:</b> The rights granted in this EULA are non-transferable without prior written consent from Emergency Leash Inc.</li>\n
    <li><b>Notice:</b> Any notice under this EULA must be provided in writing to the addresses of the parties, including email where applicable.</li>\n
    <li><b>Severability:</b> If any provision of this EULA is found to be unenforceable, the remaining provisions will remain in effect.</li>\n
</ol>

<b>Warranty Disclaimer</b>\n\n

The Software is provided "as is" without any warranty, express or implied, including but not limited to warranties of merchantability or fitness for a particular purpose. The Licensee assumes all risks associated with the use of the Software.\n\n

<b>Limited Liability</b>\n\n

Emergency Leash Inc. will not be liable for any damages resulting from the use or inability to use the Software. In no event will the liability exceed the amount paid by the Licensee to Emergency Leash Inc.\n\n

<b>Indemnification</b>\n\n

Licensee agrees to indemnify and hold Emergency Leash Inc. harmless from any claims or liabilities arising from the Licensee’s use of the Software or violation of this EULA.\n\n

<b>Entire Agreement</b>\n\n

This EULA constitutes the entire agreement between Emergency Leash Inc. and the Licensee, superseding any prior agreements.\n\n

<b>Governing Law and Jurisdiction</b>\n\n

This EULA shall be governed by the laws of the United States. Any legal action related to this EULA must be filed in the courts located in California. The prevailing party in any dispute will be entitled to recover legal fees and costs.\n\n
</string>
    <string name="FromNotificationBodyText">Your pets number has been reported! Please check your email for more information.</string>
    <string name="todayText">Date Text</string>
    <string name="banner_image">becomeamember</string>
    <string name="about_text">We create a safety leash for pets that is designed to keep your furry friends safe and secure during your adventures together. Our product is durable, reliable, and easy to use, ensuring peace of mind for every pet owner.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recaptcha_site_key">6Lew7swrAAAAAO5sMe3n1R3My7k0tY6vrEB_eVYl</string>
    <string name="privacy_policy_url">https://emergencyleash.com/privacy-policy/</string>
    <string name="terms_of_use_url">https://emergencyleash.com/terms-of-use/</string>
    <string name="stored_web_client_id">410514541495-fs5d2jloqs9scn6gv1607dsbc6qvjt67.apps.googleusercontent.com</string>
    <string name="versionNumberUpdate">Version 2025.06.03.1</string>
    <string name="facebook_app_id">253411766456855</string>
    <string name="fb_login_protocol_scheme">fb253411766456855</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="server_response">Server Response</string>
    <string name="okay">Okay</string>
    <string name="error_occurred">An error occurred.</string>
    <string name="failed_to_connect">Failed to connect to the server.</string>
    <string name="additional_contact">Additional Contact %1$d</string>
    <string name="cell_phone_number_hint">Cell Phone Number %1$d</string>
    <string name="pet_photo_description">This is a picture of your pet</string>
    <string name="emergency_contact_title">Emergency Contact %1$d</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="admins_title">Mulit-User Access</string>
    <string name="back_button_description">Back</string>
    <string name="admin_contact_title">Admin Contact %1$d</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="cell_phone_hint">Cell Phone Number</string>
    <string name="email_hint">Email %1$d</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to leave without saving?</string>
    <string name="hint_cell_phone">Cell Phone Number</string>
    <string name="hint_email">E-mail</string>
    <string name="pet_name">Pet Name</string>
    <string name="edit">Edit</string>
    <string name="female">Female</string>
    <string name="pet_type">Pet Type</string>
    <string name="pet_age">Age</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="cd_pet_name">Pet\'s name</string>
    <string name="cd_edit_button">Edit button</string>
    <string name="cd_edit_text">Edit pet details</string>
    <string name="cd_pet_photo">Pet\'s photo</string>
    <string name="cd_pet_icon">Pet icon</string>
    <string name="cd_pet_type">Type of pet</string>
    <string name="cd_gender_icon">Gender icon</string>
    <string name="cd_pet_gender">Pet\'s gender</string>
    <string name="cd_age_icon">Age icon</string>
    <string name="cd_pet_age">Pet\'s age</string>
    <string name="cd_location_icon">Location icon</string>
    <string name="cd_address1">First line of address</string>
    <string name="cd_address2">Second line of address</string>
    <string name="cd_city">City</string>
    <string name="cd_state">State</string>
    <string name="cd_zip">Zip code</string>
    <string name="create_missing_pet_flyer">Create Missing Pet Flyer</string>
    <string name="enter_description">Enter a description</string>
    <string name="enter_reward_amount">Enter reward amount</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="generate_flyer">Generate Flyer</string>
    <string name="report_lost_pet_confirmation">Report This Pet as Lost?</string>
    <string name="notification_broadcast_warning">(This will send a notification broadcast)</string>
    <string name="continue_button_text">Continue</string>
</resources>