<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_edit_fragment_background"
    android:padding="16dp">

    <!-- Confirmation Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_lost_pet_confirmation"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <!-- Additional Information Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_broadcast_warning"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:visibility="gone"/>

    <!-- Button Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            android:textSize="18sp"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/continue_button_text"
            android:textSize="18sp"
            android:backgroundTint="?attr/colorButtonBackground"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
